response listOP with preload, fixing findUsers
