# pkg/models/list_op_code.go
@@ -4,5 +4,7 @@ type ListOpCode struct {
 	BaseModel
 	OPCode string `json:"opCode" form:"opCode" gorm:"uniqueIndex" validate:"required"`
 	ModelMesin string `json:"modelMesin" form:"modelMesin" validate:"required"`
-	TipeTransaksi string `json:"tipeTransaksi" form:"tipeTransaksi" gorm:"uniqueIndex" validate:"required"`
+	TipeTransaksiID uint `json:"tipeTransaksiid" form:"tipeTransaksiid" gorm:"uniqueIndex" validate:"required"`
+	TipeTransaksi     MJenisTransaksi   `gorm:"foreignKey:TipeTransaksiID" json:"-"` //One to Many
+
 }
